--- a/index.html
+++ b/index.html
@@ -796,16 +796,16 @@ applyBodyTag="false"
         <div ng-show="$index == 0">
           <img class="off img-left" style="display: none" src="{!URLFOR($Resource.listMeAssets, 'person.svg')}"/>
           <img class="on img-left" style="display: initial" src="{!URLFOR($Resource.listMeAssets, 'person-alt.svg')}"/>
-          <img class="img-right" src="{!URLFOR($Resource.listMeAssets, 'x.svg')}" ng-click="removeCustomer($index, customer, true)"/>
-          <img class="img-right" src="{!URLFOR($Resource.listMeAssets, 'check.svg')}" ng-click="removeCustomer($index, customer, false)"/>
+          <img class="img-right" style="background-color: #FF4040" src="{!URLFOR($Resource.listMeAssets, 'x.svg')}" ng-click="removeCustomer($index, customer, true)"/>
+          <img class="img-right" style="background-color: #7AC100" src="{!URLFOR($Resource.listMeAssets, 'check.svg')}" ng-click="removeCustomer($index, customer, false)"/>
           <p class="link-title blue"> {{customer.Name}} </p>
           <p class="link-blurb blue"> Next! </p>
         </div>
         <div ng-show="$index != 0">
           <img class="off img-left" src="{!URLFOR($Resource.listMeAssets, 'person.svg')}"/>
           <img class="on img-left" src="{!URLFOR($Resource.listMeAssets, 'person-alt.svg')}"/>
-          <img class="img-right" src="{!URLFOR($Resource.listMeAssets, 'x.svg')}" ng-click="removeCustomer($index, customer, true)"/>
-          <img class="img-right" src="{!URLFOR($Resource.listMeAssets, 'check.svg')}" ng-click="removeCustomer($index, customer, false)"/>
+          <img class="img-right" style="background-color: #FF4040" src="{!URLFOR($Resource.listMeAssets, 'x.svg')}" ng-click="removeCustomer($index, customer, true)"/>
+          <img class="img-right" style="background-color: #7AC100" src="{!URLFOR($Resource.listMeAssets, 'check.svg')}" ng-click="removeCustomer($index, customer, false)"/>
           <p class="link-title"> {{customer.Name}} </p>
           <p class="link-blurb" ng-show="$index < 5 && currentEvent.Show_Wait_Time__c && currentEvent.Average_Wait_Time__c"> Estimated wait time: {{currentEvent.Average_Wait_Time__c * $index}} minutes </p>
         </div>
