--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@ applyBodyTag="false"
   <apex:includeScript value="{!URLFOR($Resource.TaskyAssets, 'slide.js')}"/>
   <apex:includeScript value="{!URLFOR($Resource.listMeAssets, 'd3/d3.min.js')}"/>
   <apex:includeScript value="{!URLFOR($Resource.RollCallAssets, 'forceTK/forceTK.js')}"/>
+  <apex:includeScript value="{!URLFOR($Resource.ListMeAssets, 'h5validate/h5validate.js')}"/>
+
   <script type="text/javascript">
   function setSection(to, from)
   {
@@ -66,6 +68,7 @@ applyBodyTag="false"
     }
   }
   $(document).ready(function(){
+     FastClick.attach(document.body);
     $('a').on('click', function(event) {
       var sectionId = $(this).attr("data-section"),
       $toSlide= $("#container section#"+sectionId),
@@ -797,6 +800,10 @@ applyBodyTag="false"
       left: 0;
     } 
   }
+
+  .red {
+    border-color:red;
+  }
   </style>
 </head>
 <body ng-controller='EventController'>
@@ -914,7 +921,7 @@ applyBodyTag="false"
       <h1 class="list-header"> Personal Info </h1>
     </div>
     <br/><br/>
-    <form>
+    <form id="customerForm" name="customerForm">
       <apex:repeat value="{!$ObjectType.Contact.FieldSets.ListMe}" var="f">
         <div class="question">
           <p>
@@ -922,11 +929,11 @@ applyBodyTag="false"
             <b ng-show="{!f.Required}" style="font-size:24px; color:red;"> * </b>
           </p>
 
-          <input class="short" type="{!f.Type}" name="text" ng-model="customer.{!f.FieldPath}" required="{!f.Required}"></input>
+          <input class="short" type="{!f.Type}" name="text" ng-model="customer.{!f.FieldPath}" ng-required="{!f.Required}"></input>
         </div>
       </apex:repeat>
       <br/><br/><br/><br/>
-    <input class="submit" type="button" value="Submit" ng-click="createCustomer(customer, currentEvent)"></input>
+    <input class="submit" type="submit" value="Submit" ng-click="customerForm.$valid && createCustomer(customer, currentEvent)"></input>
     </form>
   </div>
   <div id="settings">
@@ -1045,6 +1052,7 @@ listMeApp.controller('EventController', function($scope) {
   }
 
   $scope.createCustomer = function(customer, event) {
+    $('#add').animate({"top":"100%"}, 200);
     for (var key in customer) {
       if (isNaN(customer[key])) {
         var dateValue = Date.parse(customer[key]);
@@ -1062,7 +1070,6 @@ listMeApp.controller('EventController', function($scope) {
         if (event.status) {
           $scope.customers.push(result);
           $scope.$apply();
-          $('#add').animate({"top":"100%"}, 200);
           getEvents();
         } else if (event.type == 'exception') {
           alert('Exception: ' + event.message);
@@ -1318,7 +1325,11 @@ var escapeHtml = function(string) {
   });
 }
 
-
+$(document).ready(function () {
+    $('#customerForm').h5Validate({
+      errorClass:'red'
+    });
+  });
 </script>
 </html>
 </apex:page>
