--- a/index.html
+++ b/index.html
@@ -115,7 +115,6 @@ applyBodyTag="false"
   });
   </script>
 <style type="text/css">
-
   @-webkit-keyframes bugfix {
     from { fill: 0; }
     to { fill: 0; }
@@ -744,6 +743,13 @@ applyBodyTag="false"
     background: #999;
   }
 
+  .ellipses {
+    width: 61%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
   @media (max-height: 700px) {
     .submit {
       position: static;
@@ -752,6 +758,14 @@ applyBodyTag="false"
   }
 
   @media (max-width: 400px) {
+    .ellipses {
+      width: 41%;
+    }
+
+    .mobile-hide {
+      display: none;
+    }
+
     .header-overall {
       display: none;
     }
@@ -853,7 +867,7 @@ applyBodyTag="false"
           <img class="on img-left" style="display: initial" src="{!URLFOR($Resource.listMeAssets, 'person-alt.svg')}"/>
           <img class="img-right" style="background-color: #FF7878" src="{!URLFOR($Resource.listMeAssets, 'x.svg')}" ng-click="removeCustomer($index, customer, true)"/>
           <img class="img-right" style="background-color: #91C726" src="{!URLFOR($Resource.listMeAssets, 'check.svg')}" ng-click="removeCustomer($index, customer, false)"/>
-          <p class="link-title blue"> {{customer.Name}} </p>
+          <p class="link-title blue ellipses"> {{customer.Name}} </p>
           <p class="link-blurb blue"> Next! </p>
         </div>
         <div ng-show="$index != 0">
@@ -861,8 +875,8 @@ applyBodyTag="false"
           <img class="on img-left" src="{!URLFOR($Resource.listMeAssets, 'person-alt.svg')}"/>
           <img class="img-right" style="background-color: #FF7878" src="{!URLFOR($Resource.listMeAssets, 'x.svg')}" ng-click="removeCustomer($index, customer, true)"/>
           <img class="img-right" style="background-color: #91C726" src="{!URLFOR($Resource.listMeAssets, 'check.svg')}" ng-click="removeCustomer($index, customer, false)"/>
-          <p class="link-title"> {{customer.Name}} </p>
-          <p class="link-blurb" ng-show="$index < 5 && currentEvent.Show_Wait_Time__c && currentEvent.Average_Wait_Time__c"> Estimated wait time: {{currentEvent.Average_Wait_Time__c * $index}} minutes </p>
+          <p class="link-title ellipses"> {{customer.Name}} </p>
+          <p class="link-blurb" ng-show="$index < 5 && currentEvent.Show_Wait_Time__c && currentEvent.Average_Wait_Time__c"> <span class="mobile-hide"> Estimated wait time: </span> {{currentEvent.Average_Wait_Time__c * $index}} minutes </p>
         </div>
       </div>
     </section>
